resources/css/grid.css
html {
    box-sizing: border-box;
    font-family: 'Fauna One', serif;
    font-size: 16px;
}

/***************************/
/***************************/
/*home page settings*/
body {
    margin: 0;
}

.row {
    width: 100%;
    clear: both;
}

.col-full {
    float: left;
    width: 100%;
}

.col-half {
    width: 45%;
    float: left;
}

.col-third {
    width: 33%;
    float: left;
}



/***************************/
/*navigation heading*/
header {
    background-color: #ECECFF;
}

.fixed-header {
    position: fixed;
    width: 100%;
    height: 70px;
    z-index: 50;
    background-color: #ECECFF;
    border-bottom: .5px solid slategray;
}

.top-container {
    width: 1042px;
    display: flex;
    margin: 0 auto;
    padding-bottom: 30px;
}

.header {
    width: 1042px;
    display: flex;
    margin: 0 auto;
    justify-content: space-between;
    padding-top: 20px;
    padding-bottom: 20px;
}

.button img, .header img{
    height: 30px;
    padding-right: 15px;
    padding-left: 15px;
}

.story {
    padding-right: 15px;
}

.logo {
    font-size: 20px;
}

/***************************/
/*banner*/
.banner {
    margin-top: 125px;
    margin-left: 20px;
    padding-top: 20px;
    padding-bottom: 20px;
    z-index: 10;
}
.banner h1 {
    font-family: "Playfair Display", serif;
}
.button {
    background-color: #ECECFF;
    border: none;
}

.main-banner-photo {
    z-index: 10;
    margin-top: 175px;
    margin-left: 50px;
}

.main-banner-photo img {
     width: 100%;
     height: 100%;
}

/***************************/
/*main article top*/
.main-container-top{
    width: 1042px;
    display: flex;
    justify-content: space-between;
    margin: 0 auto;
    border-bottom: .5px solid slategray;
    margin-top: 15px;
}

.from-your-nextowrk {
    padding-left: 20px;
}

.more {
    float: right;
    margin-right: 20px;
}

/***************************/
/*articles*/
.main-container {
    width: 1042px;
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
    margin: 0 auto;
    border-bottom: .5px solid slategray;
    margin-top: 15px;
    text-align: center;
}

.articles {
    width: 40%;
}
.articles h4{
    font-size: 1.3rem;
    margin: 5px;
    padding-bottom: 30px;
}
.articles img {
    width: 225px;
    margin: 20px;
}

/***************************/
/*content / Feature / stories*/
.side-story-container{
    margin: 10px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.side-story {
    width: 40%;
    margin: 10px;
}

.main-feature {
    margin-top: 30px;
}

.small {
    width: 100%;
    height: 100%;
}
.small img {
    -webkit-transition: all 1s ease; /* Safari and Chrome */
    -moz-transition: all 1s ease; /* Firefox */
    -ms-transition: all 1s ease; /* IE 9 */
    -o-transition: all 1s ease; /* Opera */
    transition: all 1s ease;
}

.small:hover img {
    -webkit-transform:scale(1.25); /* Safari and Chrome */
    -moz-transform:scale(1.25); /* Firefox */
    -ms-transform:scale(1.25); /* IE 9 */
    -o-transform:scale(1.25); /* Opera */
     transform:scale(1.25);
}

/***************************/
/*footer*/
footer {
    background-color: #ECECFF;
    margin: 0;
    border-top: 1px solid slategray;
}

.bottom-container {
    width: 1042px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 0 auto;
}

.footer {
    padding-top: 30px;
    padding-bottom: 30px;
    padding-left: 10px;
    display: flex;
    align-content: center;
    font-size: 10px;
}


/***************************/
/***************************/
/*media screen differences*/

@media only screen and (max-width: 1024px){
    .main-container, .main-container-top, .top-container, .fixed-header{
        width: 100%;
        position: static;
    }
    .col-half {
        width: 100%;
    }
    .header {
        width: 100%;
    }

    .top-container {
        width: 100%;
    }

    .main-banner-photo {
        width: 60%;
        margin-top: 50px;
    }

    .banner {
        font-size: .90rem;
        background-color: #ECECFF;
        margin-top: 15px;
    }

    .button img{
        height: 20px;
    }

    .articles {
        width: 65%;
    }
    .articles img {
        width: 300px;
    }

    .bottom-container {
        width: 100%;
        display: flex;
        align-content: center;
        justify-content: center;
    }
    .footer {
        padding-left: 0px;
    }
}

@media only screen and (max-width: 750px){
    .banner-container {
        width: 100%;
        display: flex;
        text-align: center;
        flex-direction: column;
        background-color: #ECECFF;
        margin-left: 5px;
        margin-right: 5px;
    }

    .banner-photo-container {
        display: none;
    }
}

/***************************/
/***************************/
@media only screen and (max-width: 600px) {
    .col-half {
        width: 100%;
    }

    .button img, .header img{
        height: 20px;
        padding-right: 10px;
        padding-left: 10px;
    }
    .story {
        padding-right: 10px;
    }
    
    .banner-container {
        width: 100%;
    }
    .logo {
        font-size: 15px;
    }
    .top-container {
        width: 100%;
        font-size: 15px;
    }

    .banner-photo-container {
        display: none;
    }

    .from-your-nextowrk {
        font-size: 13px;
    }

    .main-container {
        width: 100%;
        margin-top: 10px;
    }
    .articles {
        width: 50%
    }
    .articles img {
        width: 60%;
        margin:10px;
    }
    .articles h4 {
        font-size: .80rem;
    }

    .main-feature img {
        width: 60%;
    }

    .main-feature p {
        font-size: 13px;
    }
}








/***************************/
/***************************/
/***************************/
/***************************/
/*main articles stylesheet*/

.main-article-container {
    width: 1024px;
    display: flex;
    margin: 0 auto;
}

.col-left {
    width: 30%;
    /*float: left;*/
    display: flex;
    padding: 20px 20px;
    margin-top: 50px;
    flex-direction: column;
    border-right: 1px solid slategray;
}

.col-main {
    width: 65%;
    float: left;
    display: flex;
    padding: 20px 20px;
    margin-top: 70px;
}

/***************************/
/*left side column*/
.side-article-container {
    margin-top: 30px;
    display: flex;
}

.side-article {
    display: flex;
    justify-content: space-between;
    align-items: center;
    border: .5px solid lightgray;
}

.side-article img {
    width: 100%;
    margin: 10px;
}

.side-article-image {
    width: 30%;
}
.side-article-text {
    width: 60%;
}

/***************************/
/*main feature story*/
.col-main-feature-story {
    background-color: white;
}

.col-main-feature-story img {
    float: right;
    margin: 10px;
}
.home-button {
    padding-right: 30px;
    font-size: 11px;
}


/***************************/
/***************************/
@media only screen and (max-width: 1024px){
    .main-article-container {
        width: 100%;
    }
    .col-left {
        margin-top: 0px;
        padding-top: 30px;
    }
    .col-main {
        margin-top: 0px;
        padding-top: 30px;
    }

    .home-button {
        padding-left: 20px;
    }

    .col-main-feature-story img {
        width: 50%;
    }

}


@media only screen and (max-width: 600px){
    .main-article-container {
        display: block;
    }
    .col-main {
        width: 100%;
        padding: 0;
        padding-top: 30px;
    }
    .col-left {
        width: 100%;
        padding: 0;
        background-color:  #ECECFF;
        justify-content: unset;
    }
    .side-article-container {
        background-color: white;
        height: 50px;
        padding: 0;
        margin: 0;
    }
    .side-article-image {
        display: none;
    }
    .side-article-text {
        padding-left: 20px;
    }
    .feature-paragraph {
        margin-left: 10px;
    }
    .col-main-feature-story img {
        width: 50%;
        clear: both;
    }

    /*left side column*/
    .side-article-container {
       flex-direction: column;
    }

}

